--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Absolutely Understand Guitar is a program created by Scotty West and aimed at guitar players and musicians of all levels who wish to expand their knowledge and abilities of music theory and guitar playing. This is a fan made page of the project.">
     <meta name="keywords" content="Absolutely, Understand, Guitar, Playing, Scotty West, Music">
-    <title>Home - Absolutely Understand Guitar</title>
+    <title>Home - AUG</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./style/style.css">
-    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/favicon.jpg" type="image/x-icon">
+    <link rel="preload" as="image" href="./images/header.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -18,7 +19,7 @@
 <main class="indexGrid">
     <header class="header">
         <figure class="headerImage">
-            <img src="./images/header.png" alt="headerImage">
+            <img src="./images/header.png" alt="headerImage" fetchpriority="high">
         </figure>        
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
@@ -42,45 +43,48 @@
         <hr class="headerHr">
     </header>
     <section class="mainGrid">
-        <figure class="indexImagen container-fluid" data-aos="zoom-in" data-aos-duration="1000">
-            <img class="scottyImg img-fluid" src="./images/indexScotty.png" alt="ScottyWest">
+        <figure class="indexImagen container-fluid" data-aos="zoom-in" data-aos-duration="1200">
+            <img class="scottyImg img-fluid" src="./images/indexScotty.jpg" alt="ScottyWest">
         </figure>
-        <h2 class="titleContainer container-fluid" data-aos="zoom-in" data-aos-duration="1000">
-            <p class="title">WELCOME TO THE BEST GUITAR LESSONS PROGRAM!</p>
+        <h2 class="titleContainer container-fluid" data-aos="zoom-in" data-aos-duration="1200">
+            WELCOME TO THE BEST GUITAR<br>LESSONS PROGRAM!
         </h2>
         <article class="indexTexto1 container-fluid">
-                <p data-aos="zoom-in" data-aos-duration="1000">
-                    Greetings, fellow guitar enthusiasts! I'm Scotty West. Thanks for your interest in our lessons. These 32 hour-long instruction videos contain <span class="fw-bold">all you need to know to truly understand your instrument</span> from the inside-out.
+                <h3 data-aos="zoom-in" data-aos-duration="1200">Greetings, fellow guitar enthusiasts! I'm Scotty West.</h3>
+                <p data-aos="zoom-in" data-aos-duration="1200">
+                    Thank you for your interest in our lessons. These 32 hour-long instruction videos contain<b>all you need to know to truly understand your instrument</b>from the inside-out.
                 </p>
-                <p data-aos="zoom-in" data-aos-duration="1000">
-                    <span class="fw-bold">Today, there is a <span class="fst-italic text-decoration-underline">dizzying</span> selection of guitar lessons available online, in books, and on video</span>! If you're having trouble making sense of it all, then look no further: our guitar lessons have been carefully crafted, to ensure that you will finally get <span class="text-warning fw-bold">"The BIG Picture".</span> Join thousands of satisfied students worldwide and become the guitar player you<span class="text-danger fw-bold"> always</span> wanted to be!
+                <p data-aos="zoom-in" data-aos-duration="1200">
+                    Today, <b>there is a <i class="text-decoration-underline">dizzying</i> selection of guitar lessons available online, in books, and on video!</b> If you're having trouble making sense of it all, then look no further: our guitar lessons have been carefully crafted, to ensure that you will finally get <b class="text-warning">"The BIG Picture".</b> Join thousands of satisfied students worldwide and become the guitar player you <b class="text-danger">always</b> wanted to be!
                 </p>
         </article>
     </section>
-    <hr class="hr2">
-    <div class="indexTexto2 container-fluid">
+    <hr class="hr1">
+    <section class="indexTexto2 container-fluid">
         <p data-aos="fade-up" data-aos-duration="1500">
-            There are thousands of guitar lessons out there that will show you how to place your fingers to play specific songs. You may find this fun for a while, but it's not likely to keep you satisfied for the long haul. My <span class="text-warning fw-bold">"music as language"</span> approach to guitar lessons will allow you to easily answer questions many of you have had for <span class="fst-italic">years</span> and get you on the true path to <span class="text-decoration-underline">creative fulfillment.</span>
+            There are thousands of guitar lessons out there that will show you how to place your fingers to play specific songs. You may find this fun for a while, but it's not likely to keep you satisfied for the long haul. My <b class="text-warning">"music as language"</b> approach to guitar lessons will allow you to easily answer questions many of you have had for <i>years</i> and get you on the true path to  <u>creative fulfillment.</u>
         </p>
         <hr>
         <p data-aos="fade-up" data-aos-duration="1500">
-            Some guitar lessons have you jumping around, sampling this-and-that, so you end up with a <span class="fst-italic">scattered vision</span> of how music works. Our video guitar lessons are different - they're designed to be viewed <span class="fw-bold">in order,</span> so each concept flows into the next. You could learn how to play guitar as well as, or even better than, your favorite guitar heroes. You'll finally be able to actually <span class="fw-bold">"think" on your instrument</span>... learn songs by ear... write your own music... and solo with <span class="text-danger fw-bold">power and passion</span>! It's easy if you get it explained to you in <span class="fw-bold">the right way.</span>
+            Some guitar lessons have you jumping around, sampling this-and-that, so you end up with a <i>scattered vision</i> of how music works. Our video guitar lessons are different - they're designed to be viewed <b>in order,</b> so each concept flows into the next. You could learn how to play guitar as well as, or even better than, your favorite guitar heroes. You'll finally be able to actually <b>"think" on your instrument</b>... learn songs by ear... write your own music... and solo with <b class="text-danger">power and passion!</b> It's easy if you get it explained to you in <b>the right way.</b>
         </p>
         <p data-aos="fade-up" data-aos-duration="1500">
-            These guitar lesson videos provide a solid foundation in music theory, ear training and guitar technique, all <span class="text-decoration-underline">totally integrated</span> and <span class="text-decoration-underline">profoundly well organized!</span>
+            These guitar lesson videos provide a solid foundation in music theory, ear training and guitar technique, all <u>totally integrated</u> and <u>profoundly well organized!</u>
         </p>
         <hr>
         <p data-aos="fade-up" data-aos-duration="1500">
-        Watch Scotty's <span class="text-warning">free video guitar lessons</span> - you'll be amazed at <span class="fw-bold text-danger">HOW MUCH YOU WILL LEARN!</span>
+        Watch Scotty's <b class="text-warning">free video guitar lessons</b> - you'll be amazed at <b class="text-danger">HOW MUCH YOU WILL LEARN!</b>
 
             You can reach Scotty's main webpage at: <a href="https://www.absolutelyunderstandguitar.com" target="_blank">https://www.absolutelyunderstandguitar.com</a> or visit him on <a href="https://www.facebook.com/AbsolutelyUnderstandGuitar" target="_blank">facebook.</a>
         </p>
-    </div>
-    <hr class="hr3">
+    </section>
+    <hr class="hr2">
     <footer class="footer">
-        <a href="#top">
-            <img src="./images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo">
-        </a>
+        <figure>
+            <a href="#top">
+                <img src="./images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo" loading="lazy" data-aos="zoom-in" data-aos-duration="2000">
+            </a>
+        </figure>
     </footer>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
