--- a/pages/about.html
+++ b/pages/about.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Absolutely Understand Guitar is a program created by Scotty West and aimed at guitar players and musicians of all levels who wish to expand their knowledge and abilities of music theory and guitar playing. This is a fan made page of the project. We are in the program description subpage.">
-    <title>Absolutely Understand Guitar</title>
+    <title>About - AUG</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
-    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/favicon.jpg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="aboutGrid">
+<main class="aboutGrid">
     <header class="header">
         <figure class="headerImage">
-            <img src="../images/header.png" alt="headerImage">
+            <img src="../images/header.png" alt="Header Image">
         </figure>        
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
@@ -45,36 +45,34 @@
             The Most Comprehensive and Well Organized <br> Guitar Instruction Program Available Anywhere
         </p>
     </h2>
-    <hr class="hr2">
+    <hr class="hr1">
     <div class="aboutBanner" data-aos="zoom-in" data-aos-duration="1000">
         <img src="../images/banner.jpg" class="img-fluid" alt="Scotty Banner">
     </div>
-    <hr class="hr3">
+    <hr class="hr2">
     <div class="aboutTexto1" data-aos="fade-up" data-aos-duration="1500">
         <p>
             Look at all you get with our <span class="text-warning fw-bold">video guitar instruction package</span>!
             Scotty's guitar instruction videos teach you to actually <span class="fw-bold">"think"</span> on your guitar. If a picture is worth a thousand words, these 32-1 hour-long guitar instruction videos are absolutely <span class="text-danger fw-bold fst-italic">priceless</span>! Close-ups of guitar chord and scale finger positions, multiple camera angles and large, easy-to-read graphics make Scotty's visual method of guitar instruction <span class="fw-bold">unbeatable</span>.
         </p>
     </div>
-    <hr class="hr4">
+    <hr class="hr3">
     <div class="aboutTexto2" data-aos="fade-up" data-aos-duration="1500">
         <p>
             Scotty's <span class="text-warning fw-bold">"music as language"</span> approach to guitar instruction is the key. You understand guitar better when Scotty shows you how to <span class="fst-italic">do it</span> - and then explains how it all <span class="fst-italic">works</span>, right there on your screen! It's like having <span class="text-danger fw-bold fst-italic">world-class private guitar instruction</span>, right in your own home.
         </p>
     </div>
+    <hr class="hr4">
+    <figure class="aboutFoto2" data-aos="zoom-in" data-aos-duration="1000">
+        <img src="../images/scotty3.jpg" class="img-fluid" alt="Picture of Scotty" loading="lazy">
+    </figure>
     <hr class="hr5">
-    <div class="aboutFoto2" data-aos="zoom-in" data-aos-duration="1000">
-        <img src="../images/scotty3.jpg" class="img-fluid" alt="Picture of Scotty">
-    </div>
-    <hr class="hr6">
-    <div class="footer">
-        <footer>
-            <a href="#top">
-                <img src="../images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo">
-            </a>
-        </footer>
-    </div>
-</div>
+    <footer class="footer">
+        <a href="#top">
+            <img src="../images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo" loading="lazy" data-aos="zoom-in" data-aos-duration="2000">
+        </a>
+    </footer>
+</main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
