--- a/pages/program.html
+++ b/pages/program.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Absolutely Understand Guitar is a program created by Scotty West and aimed at guitar players and musicians of all levels who wish to expand their knowledge and abilities of music theory and guitar playing. This is a fan made page of the project. We are in the program description subpage.">
     <meta name="keywords" content="Absolutely, Understand, Guitar, Playing, Scotty West, Music">
-    <title>Absolutely Understand Guitar</title>
+    <title>Program - AUG</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
-    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/favicon.jpg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="programGrid">
+<main class="programGrid">
     <header class="header">
         <figure class="headerImage">
-            <img src="../images/header.png" alt="headerImage">
+            <img src="../images/header.png" alt="Header Image">
         </figure>
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
@@ -43,53 +43,53 @@
     </header>
     <div id="programCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="6000" data-aos="zoom-in" data-aos-duration="1000">
         <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="../images/carousel/caro2-1.jpg" class="d-block mx-auto" alt="First carousel image of the AUG program">
-            </div>
-            <div class="carousel-item">
+            <figure class="carousel-item active">
+                <img src="../images/carousel/caro2-1.jpg" class="d-block mx-auto" fetchpriority="high" alt="First carousel image of the AUG program">
+            </figure>
+            <figure class="carousel-item">
                 <img src="../images/carousel/caro2-2.jpg" class="d-block mx-auto" alt="Second carousel image of the AUG program">
-            </div>
-            <div class="carousel-item">
+            </figure>
+            <figure class="carousel-item">
                 <img src="../images/carousel/caro2-3.jpg" class="d-block mx-auto" alt="Third carousel image of the AUG program">
-            </div>
-            <div class="carousel-item">
+            </figure>
+            <figure class="carousel-item">
                 <img src="../images/carousel/caro2-4.jpg" class="d-block mx-auto" alt="Fourth carousel image of the AUG program">
-            </div>
-            <div class="carousel-item">
+            </figure>
+            <figure class="carousel-item">
                 <img src="../images/carousel/caro2-5.jpg" class="d-block mx-auto" alt="Fifth carousel image of the AUG program">
-            </div>
-            <div class="carousel-item">
+            </figure>
+            <figure class="carousel-item">
                 <img src="../images/carousel/caro2-6.jpg" class="d-block mx-auto" alt="Sixth carousel image of the AUG program">
-            </div>
+            </figure>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#programCarousel" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#programCarousel" data-bs-slide="prev" aria-label="Carousel Previous Button">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#programCarousel" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#programCarousel" data-bs-slide="next" aria-label="Carousel Next Button">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
     </div>
     <hr class="hr2">
-    <div class="programText">
+    <section class="programText">
         <p data-aos="fade-up" data-aos-duration="1500">
-            Scotty's famous <span class="text-warning fw-bold">color-coded guitar scale and chord fingering charts</span> are much better than those old, black-and-white finger charts. They tell you <span class="fw-bold">much more</span> than just where to position your fingers. They show you <span class="fst-italic">how each note functions</span> in the scale or chord it is in, and how it works with other scales and chords in a song. This is <span class="fw-bold">critical</span> for lead guitarists and folks interested in song writing and improvising.
+            Scotty's famous <b class="text-warning">color-coded guitar scale and chord fingering charts</b> are much better than those old, black-and-white finger charts. They tell you <b>much more</b> than just where to position your fingers. They show you <i>how each note functions</i> in the scale or chord it is in, and how it works with other scales and chords in a song. This is <b>critical</b> for lead guitarists and folks interested in song writing and improvising.
         </p>
         <hr>
         <p data-aos="fade-up" data-aos-duration="1500">
-            The <span class="text-warning fw-bold">official course handbook</span> complements and re-enforces the video guitar lessons, making memorization and review of material a <span class="fst-italic">snap</span>. All the guitar finger charts and graphics that Scotty shows you in the DVD guitar lessons are reprinted in your book, so you can study them up close while viewing the video guitar lessons on your TV or PC. Created by a <span class="text-danger font-monospace text-decoration-underline fw-bold fst-italic">professional graphic artist</span>, these charts and illustrations are <span class="fw-bold">simple</span> to read and understand.
+            The <b class="text-warning">official course handbook</b> complements and re-enforces the video guitar lessons, making memorization and review of material a <i>snap.</i> All the guitar finger charts and graphics that Scotty shows you in the DVD guitar lessons are reprinted in your book, so you can study them up close while viewing the video guitar lessons on your TV or PC. Created by a <u class="text-danger font-monospace fst-italic">professional graphic artist,</u> these charts and illustrations are <b>simple</b> to read and understand.
         </p>
         <hr>
         <p data-aos="fade-up" data-aos-duration="1500">
-            This program will be focusing on the <span class="text-warning fw-bold">6 Main Areas of Music</span>: Pitch, Rhythm, Timbre, Dynamics, Technique, and Notation. If you aspire to be a true musician and <span class="fst-italic">satisfy yourself with your playing</span>, you need to <span class="fw-bold">master all 6 areas</span>! Here is a chart further explaining the concepts:
+            This program will be focusing on the <b class="text-warning">6 Main Areas of Music:</b> Pitch, Rhythm, Timbre, Dynamics, Technique, and Notation. If you aspire to be a true musician and <i>satisfy yourself with your playing,</i> you need to <b>master all 6 areas!</b> Here is a chart further explaining the concepts:
         </p>
-    </div>
+    </section>
     <hr class="hr3">
-    <div class="tableTitle" data-aos="zoom-in" data-aos-duration="1000">
-        <p>The 6 Main Areas of Music</p>
-    </div>
-    <table class="table table-bordered" data-aos="zoom-in" data-aos-duration="1000">
+    <h2 class="tableTitle" data-aos="zoom-in" data-aos-duration="1000">
+        The 6 Main Areas of Music
+    </h2>
+    <table class="table table-bordered" data-aos="zoom-in" data-aos-duration="1000" aria-label="Table for The 6 Main Areas of Music">
         <tbody>
             <tr>
                 <th scope="row">Pitch</th>
@@ -124,14 +124,12 @@
         </tbody>        
     </table>
     <hr class="hr4">
-    <div class="footer">
-        <footer>
-            <a href="#top">
-                <img src="../images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo">
-            </a>
-        </footer>
-    </div>
-</div>
+    <footer class="footer">
+        <a href="#top">
+            <img src="../images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo" loading="lazy" data-aos="zoom-in" data-aos-duration="2000">
+        </a>
+    </footer>
+</main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
