--- a/pages/scotty.html
+++ b/pages/scotty.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Absolutely Understand Guitar is a program created by Scotty West and aimed at guitar players and musicians of all levels who wish to expand their knowledge and abilities of music theory and guitar playing. This is a fan made page of the project. We are in a Scotty West biographical subpage.">
     <meta name="keywords" content="Absolutely, Understand, Guitar, Playing, Scotty West, Music">
-    <title>Absolutely Understand Guitar</title>
+    <title>Scotty - AUG</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
-    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/favicon.jpg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="scottyGrid">
+<main class="scottyGrid">
     <header class="header">
         <figure class="headerImage">
-            <img src="../images/header.png" alt="headerImage">
+            <img src="../images/header.png" alt="Header Image">
         </figure>
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
@@ -41,77 +41,74 @@
         </nav>
         <hr class="headerHr">
     </header>
-    <div class="scottyI1" data-aos="zoom-in" data-aos-duration="1000">
+    <figure class="scottyI1" data-aos="zoom-in" data-aos-duration="1000">
         <img src="../images/scotty1.jpg" alt="First Picture of Scotty">
-    </div>
+    </figure>
+    <hr class="hr1">
+    <section class="scottyT1">
+        <p data-aos="fade-up" data-aos-duration="1500">
+            "I never really set out to be a music teacher. My mother, a symphony violinist, started me with piano lessons when I was 6 years old. I began to learn to play the guitar in 1964, when I was 10. <b class="text-warning">The Beatles</b> had just arrived in America - and I just <u class="fst-italic">had</u> to learn to play the guitar! From the beginning, I was the kid who <b>*had*</b> to know. 
+        </p>
+        <p data-aos="fade-up" data-aos-duration="1500">
+            My piano lessons had shown me that there was <b class="text-danger">a system to the way music worked,</b> and I knew that if I wanted to learn to play guitar, <b>I would have to understand that system.</b> I wanted to write my own songs... play by ear... jam and improvise like the Beatles... but neither my private teachers or the public school music programs <i>taught</i> that stuff!
+        </p>
+    </section>
     <hr class="hr2">
-    <div class="scottyT1">
+    <section class="scottyT2">
         <p data-aos="fade-up" data-aos-duration="1500">
-            "I never really set out to be a music teacher. My mother, a symphony violinist, started me with piano lessons when I was 6 years old. I began to learn to play the guitar in 1964, when I was 10. <span class="text-warning fw-bold">The Beatles</span> had just arrived in America - and I just <span class="fst-italic text-decoration-underline">had</span> to learn to play the guitar! From the beginning, I was the kid who *had* to know. 
+            ...I tried to learn to play guitar myself. My friends would show me some chords and scales. The books I would try to read were often <b>scattered</b> and <b>confusing.</b> My music instructors didn't seem to know the answers. It's difficult to learn to play the guitar if there's no <b class="text-warning">program</b> to follow. Even so, everyone thought I was this hot guitar player. I could play the popular songs of the day... Hendrix, Dylan, The Beatles... Everyone thought I was this <i>hot-shot guitar player</i>, but I knew I was only faking it. I didn't have <b class="text-danger">"The BIG Picture"</b> yet.
         </p>
-        <p data-aos="fade-up" data-aos-duration="1500">
-            My piano lessons had shown me that there was <span class="text-danger fw-bold">a system to the way music worked</span>, and I knew that if I wanted to learn to play guitar, <span class="fw-bold">I would have to understand that system</span>. I wanted to write my own songs... play by ear... jam and improvise like the Beatles... but neither my private teachers or the public school music programs <span class="fw-bold">taught</span> that stuff!
-        </p>
-    </div>
+    </section>
     <hr class="hr3">
-    <div class="scottyT2">
-        <p data-aos="fade-up" data-aos-duration="1500">
-            ...I tried to learn to play guitar myself. My friends would show me some chords and scales. The books I would try to read were often <span class="fw-bold">scattered</span> and <span class="fw-bold">confusing</span>. My music instructors didn't seem to know the answers. It's difficult to learn to play the guitar if there's no <span class="text-warning fw-bold">program</span> to follow. Even so, everyone thought I was this hot guitar player. I could play the popular songs of the day... Hendrix, Dylan, The Beatles... Everyone thought I was this <span class="fw-bold">hot-shot guitar player</span>, but I knew I was only faking it. I didn't have <span class="text-danger fw-bold">"The BIG Picture"</span>.
-        </p>
-    </div>
-    <hr class="hr4">
-    <div id="scottyCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000" data-aos="zoom-in" data-aos-duration="1000">
+    <div id="scottyCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="6000" data-aos="zoom-in" data-aos-duration="1000">
         <div class="carousel-inner">
-            <div class="carousel-item active">
+            <figure class="carousel-item active">
                 <img src="../images/carousel/caro1-1.jpg" class="d-block mx-auto" alt="First carousel image of Scotty">
-            </div>
-            <div class="carousel-item">
+            </figure>
+            <figure class="carousel-item">
                 <img src="../images/carousel/caro1-2.jpg" class="d-block mx-auto" alt="Second carousel image of Scotty">
-            </div>
-            <div class="carousel-item">
+            </figure>
+            <figure class="carousel-item">
                 <img src="../images/carousel/caro1-3.jpg" class="d-block mx-auto" alt="Third carousel image of Scotty">
-            </div>
-            <div class="carousel-item">
+            </figure>
+            <figure class="carousel-item">
                 <img src="../images/carousel/caro1-4.jpg" class="d-block mx-auto" alt="Fourth carousel image of Scotty">
-            </div>
-            <div class="carousel-item">
+            </figure>
+            <figure class="carousel-item">
                 <img src="../images/carousel/caro1-5.jpg" class="d-block mx-auto" alt="Fifth carousel image of Scotty">
-            </div>
-            <div class="carousel-item">
+            </figure>
+            <figure class="carousel-item">
                 <img src="../images/carousel/caro1-6.jpg" class="d-block mx-auto" alt="Sixth carousel image of Scotty">
-            </div>
+            </figure>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#scottyCarousel" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#scottyCarousel" data-bs-slide="prev" aria-label="Carousel Previous Button">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#scottyCarousel" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#scottyCarousel" data-bs-slide="next" aria-label="Carousel Next Button">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <hr class="hr5">
-    <div class="scottyT3">
+    <hr class="hr4">
+    <section class="scottyT3">
         <p data-aos="fade-up" data-aos-duration="1500">
-            Then one summer, my luck changed. A new roommate named <span class="text-warning fw-bold">Dan May</span> moved in with us. Dan was one of those <span class="fw-bold">true musical prodigies</span> you hear about: played the piano before he could walk... masters degree in music composition at age 22... totally knowledgeable about guitar music theory and good at explaining it clearly and logically. Dan <span class="fw-bold">understood music inside out</span>. He actually knew the answers to all the questions that I had been asking all those years! I would slap myself on the forehead and ask "Why didn't my other music teachers show me <span class="text-danger fw-bold">this stuff</span> when I was a kid?!"
+            Then one summer, my luck changed. A new roommate named <b class="text-warning">Dan May</b> moved in with us. Dan was one of those <b>true musical prodigies</b> you hear about: played the piano before he could walk... masters degree in music composition at age 22... totally knowledgeable about guitar music theory and good at explaining it clearly and logically. Dan <b>understood music inside out.</b> He actually knew the answers to all the questions that I had been asking all those years! I would slap myself on the forehead and ask "Why didn't my other music teachers show me <b class="text-danger">this stuff</b> when I was a kid?!"
         </p>
         <p data-aos="fade-up" data-aos-duration="1500">
-            Dan showed me that learning to play the guitar is easy - if you can find someone to explain it to you <span class="fw-bold text-decoration-underline">the right way.</span>
+            Dan showed me that learning to play the guitar is easy - if you can find someone to explain it to you <u class="fw-bold">the right way.</u>
         </p>
         <p class="scottyLink">
             <a href="https://www.absolutelyunderstandguitar.com/index.php/bio" target="_blank">(...)</a>
         </p>
-        
-    </div>
-    <hr class="hr6">
-    <div class="footer">
-        <footer>
-            <a href="#top">
-                <img src="../images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo">
-            </a>
-        </footer>
-    </div>
-</div>
+    </section>
+    <hr class="hr5">
+    <footer class="footer">
+        <a href="#top">
+            <img src="../images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo" loading="lazy" data-aos="zoom-in" data-aos-duration="2000">
+        </a>
+    </footer>
+</main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
