--- a/pages/videos.html
+++ b/pages/videos.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Absolutely Understand Guitar is a program created by Scotty West and aimed at guitar players and musicians of all levels who wish to expand their knowledge and abilities of music theory and guitar playing. This is a fan made page of the project. Here are some videos of Scotty and his teaching.">
     <meta name="keywords" content="Absolutely, Understand, Guitar, Playing, Scotty West, Music">
-    <title>Absolutely Understand Guitar</title>
+    <title>Videos - AUG</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/style.css">
-    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/favicon.jpg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="videosGrid">
+<main class="videosGrid">
     <header class="header">
         <figure class="headerImage">
-            <img src="../images/header.png" alt="headerImage">
+            <img src="../images/header.png" alt="Header Image">
         </figure>
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
@@ -41,59 +41,57 @@
         </nav>
         <hr class="headerHr">
     </header>
-    <div class="videoT1" data-aos="zoom-in" data-aos-duration="1000">
-        <p class="h2">
+    <section class="videoT1" data-aos="zoom-in" data-aos-duration="1000">
+        <h2>
             <a href="https://www.youtube.com/watch?v=Gg1L-sBIxnY&list=PLJwa8GA7pXCWAnIeTQyw_mvy1L7ryxxPH&index=1" target="_blank" rel="noopener noreferrer">The Absolutely Understand Guitar Video Series</a>
-        </p>
-    </div>
+        </h2>
+    </section>
     <div class="video1" data-aos="fade-up" data-aos-duration="1500">
-        <iframe width="560" height="315" 
-            src="https://www.youtube.com/embed/Gg1L-sBIxnY?si=WuWY-ICSXA8TsnHe" 
-            title="YouTube video player" 
-            frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        <iframe width="560" height="315"
+            src="https://www.youtube.com/embed/Gg1L-sBIxnY?si=WuWY-ICSXA8TsnHe"
+            title="The Absolutely Understand Guitar Video Series"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen>
+        </iframe>
+    </div>
+    <hr class="hr1">
+    <section class="videoT2" data-aos="zoom-in" data-aos-duration="1000">
+        <h2>
+            <a href="https://www.youtube.com/watch?v=erelNRRYXUA&list=PL0DEDF92CF4366923&index=1" target="_blank" rel="noopener noreferrer">The Ear Training Series</a>
+        </h2>
+    </section>
+    <div class="video2" data-aos="fade-up" data-aos-duration="1500">
+        <iframe width="560" height="315"
+            src="https://www.youtube.com/embed/erelNRRYXUA?si=_ry3L4LYculn0AaP"
+            title="The AUG Ear Training Series"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen>
         </iframe>
     </div>
     <hr class="hr2">
-    <div class="videoT2" data-aos="zoom-in" data-aos-duration="1000">
-        <p class="h2">
-            <a href="https://www.youtube.com/watch?v=erelNRRYXUA&list=PL0DEDF92CF4366923&index=1" target="_blank" rel="noopener noreferrer">The Ear Training Series</a>
-        </p>
-    </div>
-    <div class="video2" data-aos="fade-up" data-aos-duration="1500">
-        <iframe width="560" height="315" 
-            src="https://www.youtube.com/embed/erelNRRYXUA?si=_ry3L4LYculn0AaP" 
-            title="YouTube video player" 
-            frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            allowfullscreen>
-        </iframe>
-    </div>
-    <hr class="hr3">
-    <div class="videoT3" data-aos="zoom-in" data-aos-duration="1000">
-        <p class="h2">
+    <section class="videoT3" data-aos="zoom-in" data-aos-duration="1000">
+        <h2>
             <a href="https://www.youtube.com/watch?v=sbQEQHQ5HX4" target="_blank" rel="noopener noreferrer">Some of Scotty's playing with <span>The Experimental Ensemble of Cape Cod</span>!</a>
-        </p>
-    </div>
+        </h2>
+    </section>
     <div class="video3" data-aos="fade-up" data-aos-duration="1500">
-        <iframe width="560" height="315" 
-                src="https://www.youtube.com/embed/sbQEQHQ5HX4?si=xyl2xAsaOxEAunVO" 
-                title="YouTube video player" 
-                frameborder="0" 
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/sbQEQHQ5HX4?si=xyl2xAsaOxEAunVO"
+                title="Some of Scotty's playing with The Experimental Ensemble of Cape Cod!"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen>
         </iframe>
     </div>
-    <hr class="hr4">
-    <div class="footer">
-        <footer>
-            <a href="#top">
-                <img src="../images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo">
-            </a>
-        </footer>
-    </div>
-</div>
+    <hr class="hr3">
+    <footer class="footer">
+        <a href="#top">
+            <img src="../images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo" loading="lazy" data-aos="zoom-in" data-aos-duration="2000">
+        </a>
+    </footer>
+</main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
